2005-10-26  Martin Baulig  <martin@ximian.com>

	* mono-debug-debugger.c
	(MonoDebuggerMetadataInfo): Added `klass_parent_offset'.

2005-10-24  Raja R Harinath  <harinath@gmail.com>

	* icall.c (base64_to_byte_array): Don't pass an out-of-range
	integer to isspace.

2005-10-21  Zoltan Varga  <vargaz@gmail.com>

	* marshal.c (emit_marshal_vtype): Correctly handle [In,Out] modifiers
	when passing valuetypes byref. Fixes #76502.

2005-10-19  Jackson Harper  <jackson@ximian.com>

	* profiler.c: Don't put a . in front of types that are not in a
	namespace.

2005-10-18  Zoltan Varga  <vargaz@gmail.com>

	* icall.c (ves_icall_Type_GetField): Applied patch from Robert Jordan (robertj@gmx.net). Fixes #75515.

2005-10-15  Zoltan Varga  <vargaz@freemail.hu>

	* marshal.c: Add generics support to the ldfld/stfld wrappers. Fixes
	#76436.
	(mono_marshal_get_ldflda_wrapper): Fix a warning.

2005-10-13  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* assembly.c metadata-internals.h icall.c: Define an additional
	parameter for mono_assembly_name_parse_full, so we can avoid creating
	S.R.AssemblyName.Version when no version info wasn't passed.
	
2005-10-09  Miguel de Icaza  <miguel@novell.com>

	* class.c (mono_type_get_full_name): Reimplement method that was
	removed. 

	* image.c: Some docs

2005-10-10  Zoltan Varga  <vargaz@gmail.com>

	* profiler.c (output_newobj_profile): Fix printing of Total memory
	on x86.

2005-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* profiler.c: Add support for allocations > 2GB. Fixes #74886.

2005-10-08  Gert Driesen  <drieseng@users.sourceforge.net>

	* threads.c: remove debug output.

2005-10-08  Zoltan Varga  <vargaz@freemail.hu>

	* threads.c (mono_thread_manage): Fix crashes if more than 64
	threads need to be aborted. Hopefully fixes #75899.

	* assembly.c (mono_stringify_assembly_name): New helper function.

	* class.c: Use mono_stringify_assembly_name instead of the similar
	static function.
